--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Assets\Scripts\LevelManager.cs" />
     <Compile Include="Assets\Scripts\MusicManager.cs" />
     <Compile Include="Assets\Scripts\PlayerPrefManager.cs" />
+    <Compile Include="Assets\SetStartVolume.cs" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>/Users/yihao/repos/Unity2D/Glitch Garden/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
     </Reference>
